--- a/ParkingChecker.InputFromAndroidApi/Properties/launchSettings.json
+++ b/ParkingChecker.InputFromAndroidApi/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "https://0.0.0.0:5001",
+      "applicationUrl": "http://0.0.0.0:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
