--- a/ParkingChecker.InputFromAndroidApi/appsettings.json
+++ b/ParkingChecker.InputFromAndroidApi/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseConfiguration": {
+    "DatabaseName": "parking_checker",
+    "ConnectionString": "mongodb://admin:fodffdsfgnoGUIYGb42d@45.83.123.118:27017/"
+  }
 }
