--- a/ParkingChecker.InputFromAndroidApi/ParkingChecker.InputFromAndroidApi.csproj
+++ b/ParkingChecker.InputFromAndroidApi/ParkingChecker.InputFromAndroidApi.csproj
@@ -4,5 +4,12 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
+      <PackageReference Include="MongoDbGenericRepository" Version="1.4.8" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta2" />
+      <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    </ItemGroup>
+
 
 </Project>
